--- a/LoginRegister/app/src/main/res/layout/activity_user_area.xml
+++ b/LoginRegister/app/src/main/res/layout/activity_user_area.xml
@@ -7,8 +7,10 @@
     android:id="@+id/drawerLayout">
 
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/f1content">
 
         <TextView
             android:id="@+id/tvWelcomeMsg"
@@ -38,6 +40,7 @@
 
     </LinearLayout>
     <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@menu/navigation_menu"
